# opencl-playground

./: CMakeLists.txt  README.md  main.cpp
common/: cl.hpp  err_code.h
common/cpp/: cl.hpp  util.hpp
hands_on/common/cpp/: cl.hpp  device_picker.hpp  util.hpp
hands_on/ex1/: main.c  main.cpp
hands_on/ex2_3/: main.c  main.cpp
hands_on/ex4/: main.c  main.cpp
hands_on/ex5/: main.c  main.cpp
hands_on/ex6/: main.cpp  matrix_lib.cpp
hands_on/ex6_7_8/: README.md  block_mmul.hpp  main.cpp  matrix_lib.hpp
hands_on/ex9/: main.cpp
hands_on/ex9_10_A/: main.cpp
